--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -27,7 +27,7 @@
 <%- include("includes/flash") %>
 
 
-<input type="text" id="csrf" name="_csrf" value="<%= csrfToken %>" hidden>
+<input type="text" id="csrf" name="_csrf" value="" hidden>
 <input type="submit" class="botao" id="botaoSubmit" value="Fazer Login">
 </form>
 </center>
